@@ -35,39 +35,25 @@
  * holder.
  */
 
-package com.sun.jersey.server.spi;
-
-import java.lang.annotation.Annotation;
-import java.lang.reflect.Type;
+package com.sun.jersey.spi;
 
 /**
- * An injectable interface providing lookup of {@link StringReader} instances.
+ * Read a string value and convert to a Java type.
+ * <p>
+ * A {@link StringReaderProvider} is responisble for providing an instance
+ * of this interface.
  *
+ * @param <T> the Java type to convert to.
+ * 
  * @author Paul.Sandoz@Sun.Com
  */
-public interface StringReaderWorkers {
+public interface StringReader<T> {
 
     /**
-     * Get a string reader that matches a set of criteria.
+     * Read a string value and convert to a Java type.
      *
-     * @param <T> the type of object to be read from a string.
-     *
-     * @param type the class of object to be read.
-     *
-     * @param genericType the type of object to be produced. E.g. if the
-     * message body is to be converted into a method parameter, this will be
-     * the formal type of the method parameter as returned by
-     * <code>Class.getGenericParameterTypes</code>.
-     *
-     * @param annotations an array of the annotations on the declaration of the
-     * artifact that will be initialized with the produced instance. E.g. if the
-     * string is to be converted into a method parameter, this will be
-     * the annotations on that parameter returned by
-     * <code>Class.getParameterAnnotations</code>.
-     *
-     * @return a StringReader that matches the supplied criteria or null
-     * if none is found.
+     * @param value The string value.
+     * @return the instance of the Java type.
      */
-    <T> StringReader<T> getStringReader(Class<T> type, Type genericType,
-            Annotation annotations[]);
+    T fromString(String value);
 }
