@@ -41,7 +41,7 @@ import com.sun.jersey.server.impl.model.parameter.multivalued.MultivaluedParamet
 import com.sun.jersey.api.model.Parameter;
 import com.sun.jersey.core.spi.component.ComponentScope;
 import com.sun.jersey.server.impl.model.parameter.multivalued.MultivaluedParameterExtractor;
-import com.sun.jersey.server.spi.StringReaderWorkers;
+import com.sun.jersey.spi.StringReaderWorkers;
 import com.sun.jersey.spi.inject.InjectableProvider;
 import java.lang.annotation.Annotation;
 
